--- a/05__String_Array/.project
+++ b/05__String_Array/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>05__String</name>
+	<name>05__String_Array</name>
 	<comment></comment>
 	<projects>
 	</projects>
